--- a/index.html
+++ b/index.html
@@ -7,7 +7,6 @@
     <link rel="stylesheet" href="styles.css">
 </head>
 <body>
-    <!-- Navigation -->
     <header>
       <h1>Lukas Fenkam</h1>
       <p>Computer Science Student | Programmer | Web Developer</p>
@@ -22,23 +21,18 @@
         </nav>
     </header>
 
-    <!-- Home Section -->
     <section id="home">
     </section>
 
-    <!-- About Section -->
     <section id="about">
         <h2>About Me</h2>
         <p>I am a Computer Science student at Ontario Tech University with a passion for software development and problem-solving. With experience in a variety of programming languages, including Java, JavaScript, HTML, CSS, and Python, I thrive in both front-end and back-end development. Through my work with frameworks like Quarkus and my contributions to open-source projects, I've honed my skills in building efficient, scalable applications. I have also developed interactive projects, such as a Battleship game using JavaScript, which showcases my ability to integrate logic with user-friendly interfaces. My background extends beyond programming — having worked at summer camps and with educational organizations, I bring strong communication, leadership, and teamwork skills to every project. Fluent in English, French, and German, I am always eager to take on new challenges and collaborate with others to create impactful, user-focused solutions.</p>
     </section>
 
-    <!-- Skills Section -->
     <section id="skills">
-      <!-- Technology/Programming Skills -->
       <h2>Technology & Programming Skills</h2>
       <div class="flashcard-container">
           <div class="flashcard-row">
-              <!-- Java -->
               <div class="flashcard">
                   <div class="front">
                       <h2>Java</h2>
@@ -48,7 +42,6 @@
                   </div>
               </div>
   
-              <!-- Python -->
               <div class="flashcard">
                   <div class="front">
                       <h2>Python</h2>
@@ -58,7 +51,6 @@
                   </div>
               </div>
   
-              <!-- C++ -->
               <div class="flashcard">
                   <div class="front">
                       <h2>C++</h2>
@@ -68,7 +60,6 @@
                   </div>
               </div>
   
-              <!-- HTML & CSS -->
               <div class="flashcard">
                   <div class="front">
                       <h2>HTML & CSS</h2>
@@ -78,7 +69,6 @@
                   </div>
               </div>
   
-              <!-- Git & GitHub -->
               <div class="flashcard">
                   <div class="front">
                       <h2>Git & GitHub</h2>
@@ -88,7 +78,6 @@
                   </div>
               </div>
   
-              <!-- Quarkus -->
               <div class="flashcard">
                   <div class="front">
                       <h2>Quarkus</h2>
@@ -98,23 +87,20 @@
                   </div>
               </div>
   
-              <!-- Linux -->
               <div class="flashcard">
                   <div class="front">
                       <h2>Linux</h2>
                   </div>
                   <div class="back">
-                      <p>I have extensive experience using Linux, particularly for development and system administration tasks. My familiarity with the terminal, file system navigation, shell scripting, and working with tools like Git and Docker on Linux has been crucial in many of my projects. Linux also plays a key role in my daily development workflow, where I often use it to manage environments and handle deployments.</p>
+                      <p>I have extensive experience using Linux, particularly for development and system administration tasks. My familiarity with the terminal, file system navigation, shell scripting, and working with tools like Git on Linux has been crucial in many of my projects. Linux also plays a key role in my daily development workflow, where I often use it to manage environments and handle deployments.</p>
                   </div>
               </div>
           </div>
       </div>
   
-      <!-- General Skills -->
       <h2>General Skills</h2>
       <div class="flashcard-container">
           <div class="flashcard-row">
-              <!-- Leadership -->
               <div class="flashcard">
                   <div class="front">
                       <h2>Leadership</h2>
@@ -124,7 +110,6 @@
                   </div>
               </div>
   
-              <!-- Teamwork -->
               <div class="flashcard">
                   <div class="front">
                       <h2>Teamwork</h2>
@@ -134,7 +119,6 @@
                   </div>
               </div>
   
-              <!-- Problem Solving -->
               <div class="flashcard">
                   <div class="front">
                       <h2>Problem Solving</h2>
@@ -144,7 +128,6 @@
                   </div>
               </div>
   
-              <!-- Communication -->
               <div class="flashcard">
                   <div class="front">
                       <h2>Communication</h2>
@@ -154,7 +137,6 @@
                   </div>
               </div>
   
-              <!-- Conflict Resolution -->
               <div class="flashcard">
                   <div class="front">
                       <h2>Conflict Resolution</h2>
@@ -166,35 +148,19 @@
           </div>
       </div>
   </section>
-  
-  
 
-    <!-- Projects Section -->
     <section id="projects">
         <h2>Projects</h2>
-        <div class="project-card">
-            <img src="project-thumbnail.jpg" alt="Project Thumbnail">
-            <h3>Project Title</h3>
-            <p>Short description of the project.</p>
-            <button class="modal-trigger">More Info</button>
-        </div>
+        
     </section>
 
-    <!-- Contact Section -->
     <section id="contact">
-        <h2>Contact Me</h2>
-        <p>Email: <a href="mailto:lukas@fenkam.name">lukas@fenkam.name</a></p>
-        <p>Phone: (647)-221-2332</p>
+        <h2>Contact</h2>
     </section>
 
-    <!-- Modal for Project Details -->
-    <div id="projectModal" class="modal">
-        <div class="modal-content">
-            <span class="close">&times;</span>
-            <h2>Project Details</h2>
-            <p>Detailed information about the project goes here...</p>
-        </div>
-    </div>
+    <footer>
+        <p>&copy; 2025 Lukas Fenkam. All rights reserved.</p>
+    </footer>
 
     <script src="scripts.js"></script>
 </body>
