improve design, fix pages

--- a/index.html
+++ b/index.html
@@ -80,18 +80,18 @@
                 <div class="slide displaySlide" id="slide1">
                     <h3>Battleship Game</h3>
                     <p>A web-based Battleship game built using JavaScript, HTML, and CSS.</p>
-                    <a id="battleship-link" href="BattleshipWebpage/battleship.html" target="_blank">Play Game</a>
-                    <a href="https://github.com/Luke1432/battleship-game" target="_blank">View on GitHub</a>
+                    <button class="github-view"><a id="battleship-link" href="BattleshipWebpage/battleship.html" target="_blank">Play Game</a></button>
+                    <button class="github-view"><a href="https://github.com/Luke1432/battleship-game" target="_blank">View on GitHub</a></button>
                 </div>
                 <div class="slide" id="slide2">
                     <h3>Red Hat GitHub Application (Internship Project)</h3>
                     <p>During my internship at Red Hat, I developed a GitHub bot designed to automate and streamline issue and pull request management for the Quarkus ecosystem.</p>
-                    <a href="https://github.com/Luke1432/quarkus-github-bot" target="_blank">View on GitHub</a>
+                    <button class="github-view"><a href="https://github.com/Luke1432/quarkus-github-bot" target="_blank">View on GitHub</a></button>
                 </div>
                 <div class="slide" id="slide3">
                     <h3>Portfolio Website</h3>
                     <p>A fully responsive, user-friendly portfolio website, made using HTML, CSS and JavaScript.</p>
-                    <a href="https://github.com/Luke1432/portfolio-website" target="_blank">View on GitHub</a>
+                    <button class="github-view"><a href="https://github.com/Luke1432/portfolio-website" target="_blank">View on GitHub</a></button>
                 </div>
             </div>
             <button class="prev" onclick="prevSlide()">&#10094;</button>
@@ -101,7 +101,7 @@
     <section class="section" id="resume">
         <h2>Resume</h2>
         <div class="pdf-container">
-            <embed src="LukasFenkamResume.pdf#toolbar=0&navpanes=0&scrollbar=0" width="1100" height="950"/>
+            <embed src="LukasFenkamResume.pdf#toolbar=0&navpanes=0&scrollbar=0" width="1100" height="450" type="application/pdf" class="pdf-viewer"/>
         </div>
     </section>
     <section class="section" id="certifications">
@@ -122,10 +122,8 @@
         </div>
     </section>
     <section class="section" id="contact">
-        <!-- Contact section content -->
     </section>
     <footer>
-        <!-- Footer content -->
     </footer>
 </body>
 </html>
