--- a/index.html
+++ b/index.html
@@ -81,7 +81,7 @@
                 <div class="slide displaySlide" id="slide1">
                     <h3>Battleship Game</h3>
                     <p>A web-based Battleship game built using JavaScript, HTML, and CSS.</p>
-                    <button class="project-button"><a id="battleship-link" href="BattleshipWebpage/battleship.html" target="_blank">Play Game</a></button>
+                    <button class="project-button"><a id="battleship-link" href="https://luke1432.github.io/BattleshipWebpage/" target="_blank">Play Game</a></button>
                     <button class="project-button"><a href="https://github.com/Luke1432/battleship-game" target="_blank">View on GitHub</a></button>
                 </div>
                 <div class="slide" id="slide2">
